placeholder for compare company and sector

--- a/src/app/comparecompany/comparecompany.component.html
+++ b/src/app/comparecompany/comparecompany.component.html
@@ -16,12 +16,12 @@
                     <div class="form-group row text-right">
                             <label for="roles" class="col-sm-2 control-label"><font class="myColor_red">*</font>Company:</label>
                             <div class="col-sm-4">
-                                    <input type="text" class="form-control" placeholder="Please input company name"
+                                    <input type="text" class="form-control" placeholder="Company name"
                                     name="firstCompany" [(ngModel)]="compareModel.firstCompany" required>
                             </div>
                             <label for="roles" class="col-sm-2 control-label text-center">Compare to</label>
                             <div class="col-sm-4">
-                                    <input type="text" class="form-control" placeholder="Please input company name"
+                                    <input type="text" class="form-control" placeholder="Company name you want to compare"
                                     name="secondCompany" [(ngModel)]="compareModel.secondCompany" >
                             </div>
                     </div>
