--- a/src/app/comparesector/comparesector.component.html
+++ b/src/app/comparesector/comparesector.component.html
@@ -16,12 +16,12 @@
                 <div class="form-group row text-right">
                         <label for="roles" class="col-sm-2 control-label"><font class="myColor_red">*</font>Sector:</label>
                         <div class="col-sm-4">
-                                <input type="text" class="form-control" placeholder="Please input sector name"
+                                <input type="text" class="form-control" placeholder="Sector name"
                                 name="firstSector" [(ngModel)]="sectorModel.firstSector" required>
                         </div>
                         <label for="roles" class="col-sm-2 control-label text-center">Compare to</label>
                         <div class="col-sm-4">
-                                <input type="text" class="form-control" placeholder="Please input sector name"
+                                <input type="text" class="form-control" placeholder="Sector name you want to compare"
                                 name="secondSector" [(ngModel)]="sectorModel.secondSector" >
                         </div>
                 </div>
