--- a/src/app/ipouser/ipouser.component.html
+++ b/src/app/ipouser/ipouser.component.html
@@ -8,11 +8,13 @@
 
                 <form role="form" class="form-horizontal">
 
-                    <div class="form-group  row my-float-right" >
-                        <button type="submit" class="btn btn-primary mr-sm-3 " style="width:190px;"
-                                data-toggle="modal" data-target="#addIPODetails" (click)="openIPODetailsWindow()">Add IPODetails</button>
-                    </div>
-                    <br><br>
+                <div class="form-group row-centered form-inline">
+                    <label for="roles" class="col-sm-8 control-label"></label>
+                    <input id="searchCompanyName" type="text" class="form-control col-sm-2 mr-sm-2" placeholder="Input company name">
+                    <button type="submit" class="btn btn-primary mr-sm-2" style="width:15%;" (click)="searchIPOs()">Search</button>
+                    <label for="userName" class="control-label col-sm-2"></label>
+                </div>
+  
                     <div class="form-group row-centered panel-collapse">
                         <table data-toggle="table" class="table table-hover table-bordered">
                             <thead class="thead-light">
@@ -27,28 +29,16 @@
                             </thead>
                             <tbody>
                                 <tr *ngFor="let item of ipouserService.ipoDetailsList">
-                                  <td class=" col-sm-2">
-                                      <input  name="companyName"  type="text" class="form-control" 
-                                       value={{item.companyName}} (change)="companyNameChange(item,$event.target.value)"/></td>
-                                  <td class=" col-sm-2">
-                                      <input  name="stockExchange"   type="text" class="form-control" 
-                                              value={{item.stockExchange}} (change)="stockExchangeChange(item,$event.target.value)"/></td>
-                                  <td class=" col-sm-2">
-                                      <input  name="pricePerShare"   type="text" class="form-control" 
-                                              value={{item.pricePerShare}} (change)="pricePerShareChange(item,$event.target.value)"/></td>
-                                  <td class=" col-sm-2">
-                                      <input  name="numberOfShares"  type="text" class="form-control" 
-                                       value={{item.numberOfShares}} (change)="numberOfSharesChange(item,$event.target.value)"/></td>
-                                  <td class=" col-sm-2">
-                                      <input  name="openTime"   type="text" class="form-control" 
-                                              value={{item.openTime}} (change)="openTimeChange(item,$event.target.value)"/>
-                                      </td>
-                                                                                         
+                                  <td class=" col-sm-2"><span>{{item.companyName}}</span></td>
+                                  <td class=" col-sm-2"><span>{{item.stockExchange}}</span></td>
+                                  <td class=" col-sm-2"><span>{{item.pricePerShare}}</span></td>
+                                  <td class=" col-sm-2"><span>{{item.numberOfShares}}</span></td>
+                                  <td class=" col-sm-2"><span>{{item.openTime}}</span></td>          
                                   <td class=" col-sm-2">
                                       <span style="text-align:right;display:block">
                                       <button type="submit" class="btn btn-primary btn-block" 
-                                              data-toggle="modal" data-target="#editIPODetails"
-                                              (click)="editIPODetails(item)">Company Details</button>
+                                              data-toggle="modal" data-target="#displayCompany"
+                                              (click)="displayCompany(item)">Company Details</button>
                                       </span>
                                   </td>
                                 </tr>
@@ -64,62 +54,72 @@
     
     
 
-    <div class="modal fade" id="addIPODetails" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="displayCompany" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h6 class="modal-title" id="exampleModalLabel2"><strong>Add IPODetails {{addStatus}}</strong></h6>
+                    <h6 class="modal-title" id="exampleModalLabel2"><strong>Company Details</strong></h6>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
+
+                
                 <div class="modal-body">
                     <form class="form-horizontal">
                         <div class="form-group row text-right">
                             <label class="col-sm-4 control-label">Company Name:</label>
                             <div class="col-sm-8">
-                                <input id="companyName" type="text" class="form-control "name="companyName" >
-                            </div>
-                        </div>
-                        <div class="form-group row text-right">
-                          <label class="col-sm-4 control-label">Stock Exchange:</label>
-                          <div class="col-sm-8">
-                              <input id="stockExchange" type="text" class="form-control" name="stockExchange">
-                          </div>
-                        </div>
-                        <div class="form-group row text-right">
-                            <label class="col-sm-4 control-label">Price per Share:</label>
-                            <div class="col-sm-8">
-                                <input id="pricePerShare" type="text" class="form-control" name="pricePerShare">
-                            </div>
-                        </div>
-    
-                        <div class="form-group row text-right">
-                          <label class="col-sm-4 control-label">Total Number of Shares:</label>
-                          <div class="col-sm-8">
-                              <input id="numberOfShares" type="text" class="form-control" name="numberOfShares">
-                          </div>
-                        </div>
-                        <div class="form-group row text-right">
-                            <label class="col-sm-4 control-label">Open Date Time:</label>
-                            <div class="col-sm-8">
-                                <input id="openTime" type="text" class="form-control" name="openTime">
+                                <span>{{companyModel.companyName}}</span>
                             </div>
                         </div>
 
                         <div class="form-group row text-right">
-                          <label class="col-sm-4 control-label">Remarks:</label>
-                          <div class="col-sm-8">
-                              <input id="remarks" type="text" class="form-control" name="remarks">
-                          </div>
-                        </div>   
-                        
-                        <div class="row-centered" >
-                            <label class="col-sm-1 control-label"></label>
-                            <button id="addIPODetailsBtn" type="submit" class="btn btn-primary  btn-block" (click)="addIPODetails()">
-                            Save</button>
-                            <label class="col-sm-1 control-label"></label>
+                                <label class="col-sm-4 control-label">Stock Code:</label>
+                                <div class="col-sm-8">
+                                        <span>{{companyModel.stockCode}}</span>
+                                </div>
                         </div>
+                            
+                        <div class="form-group row text-right">
+                          <label class="col-sm-4 control-label">Stock Exchange:</label>
+                          <div class="col-sm-8">
+                                <span>{{companyModel.stockExchange}}</span>
+                          </div>
+                        </div>
+                        <div class="form-group row text-right">
+                            <label class="col-sm-4 control-label">Turnover:</label>
+                            <div class="col-sm-8">
+                                    <span>{{companyModel.turnover}}</span>
+                            </div>
+                        </div>
+    
+                        <div class="form-group row text-right">
+                          <label class="col-sm-4 control-label">CEO:</label>
+                          <div class="col-sm-8">
+                                <span>{{companyModel.ceo}}</span>
+                          </div>
+                        </div>
+                        <div class="form-group row text-right">
+                            <label class="col-sm-4 control-label">Directors:</label>
+                            <div class="col-sm-8">
+                                    <span>{{companyModel.directors}}</span>
+                            </div>
+                        </div>
+
+                        <div class="form-group row text-right">
+                          <label class="col-sm-4 control-label">Sector Name:</label>
+                          <div class="col-sm-8">
+                                <span>{{companyModel.sectorName}}</span>
+                          </div>
+                        </div>
+                        <div class="form-group row text-right">
+                            <label class="col-sm-4 control-label">Brief:</label>
+                            <div class="col-sm-8">
+                                    <span>{{companyModel.brief}}</span>
+                            </div>
+                        </div>
+
                     </form>
                 </div>
             </div>
