--- a/src/app/importdata/importdata.component.html
+++ b/src/app/importdata/importdata.component.html
@@ -2,7 +2,7 @@
 
 
 <div class="row align-items-center justify-content-center">
-        <h2><strong>Upload&Import StockPrice</strong></h2>
+        <h2>Import StockPrices</h2>
       </div>
       <br />
       <div class="row">
