--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,6 +31,7 @@
         <a class="navbar-brand" routerLink="/displayIPO" routerLinkActive="active">IPOs</a>
         <a class="navbar-brand" routerLink="/compareCompany" routerLinkActive="active" >Compare Company</a>
         <a class="navbar-brand"  routerLink="/compareSector" routerLinkActive="active" >Compare Sectors</a>
+        <a class="navbar-brand"  routerLink="/other" routerLinkActive="active" >Others</a>
       </div>
     </div>
   
