--- a/src/app/importdata/importdata.component.html
+++ b/src/app/importdata/importdata.component.html
@@ -1,120 +1,114 @@
+<div class="container my-margin-top3">
+    <div class="row">
+        <div class="col-md-2"></div>
+        <div class="card bg-light col-md-8">
+            <div class="card-body">
 
-
-
-<div class="row align-items-center justify-content-center">
-        <h2>Import StockPrices</h2>
-      </div>
-      <br />
-      <div class="row">
-        <div class="col-md-4">
-          <h3>Select files</h3>
-          <div ng2FileDrop [ngClass]="{ 'nv-file-over': hasBaseDropZoneOver }" (fileOver)="fileOverBase($event)" [uploader]="uploader"
-               class="form-control my-drop-zone ">
-            Base drop zone
-          </div>
-          <br />
-          <div ng2FileDrop [ngClass]="{ 'another-file-over-class': hasAnotherDropZoneOver }" (fileOver)="fileOverAnother($event)" [uploader]="uploader"
-               class="form-control my-drop-zone">
-            Another drop zone
-          </div>
-          <hr />
-          <label>Multiple</label>
-          <input type="file" class="form-control" ng2FileSelect [uploader]="uploader" multiple />
-          <label>Single</label>
-          <input type="file" class="form-control" ng2FileSelect [uploader]="uploader" />
-        </div>
-      
-        <div class="col-md-8" style="margin-bottom: 40px">
-          <h3>Upload queue</h3>
-          <p>Queue length: {{ uploader?.queue?.length }}</p>
-      
-          <table class="table">
-            <thead>
-              <tr>
-                <th width="50%">Name</th>
-                <th>Size</th>
-                <th>Progress</th>
-                <th>Status</th>
-                <th>Actions</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr *ngFor="let item of uploader.queue">
-                <td>
-                  <strong>{{ item?.file?.name }}</strong>
-                </td>
-                <td *ngIf="uploader.options.isHTML5" nowrap>
-                  {{ item?.file?.size / 1024 / 1024 | number: ".2" }} MB
-                </td>
-                <td *ngIf="uploader.options.isHTML5">
-                  <div class="progress" style="margin-bottom: 0;">
-                    <div class="progress-bar" role="progressbar" [ngStyle]="{ width: item.progress + '%' }"></div>
+                  <div class="row align-items-center justify-content-center">
+                    <h3 class="text-center myColor">Import StockPrices</h3>
                   </div>
-                </td>
-                <td class="text-center">
-                  <span *ngIf="item.isSuccess"><i class="glyphicon glyphicon-ok"></i></span>
-                  <span *ngIf="item.isCancel"><i class="glyphicon glyphicon-ban-circle"></i></span>
-                  <span *ngIf="item.isError"><i class="glyphicon glyphicon-remove"></i></span>
-                </td>
-                <td nowrap>
-                  <button type="button" class="btn btn-success btn-xs" (click)="item.upload()"
-                          [disabled]="item.isReady || item.isUploading || item.isSuccess">
-                    <span class="glyphicon glyphicon-upload"></span> Upload
-                  </button>
-                  <button type="button" class="btn btn-warning btn-xs" (click)="item.cancel()" [disabled]="!item.isUploading">
-                    <span class="glyphicon glyphicon-ban-circle"></span> Cancel
-                  </button>
-                  <button type="button" class="btn btn-danger btn-xs" (click)="item.remove()">
-                    <span class="glyphicon glyphicon-trash"></span> Remove
-                  </button>
-                </td>
-              </tr>
-            </tbody>
-          </table>
+                  <br>
+                  <br>
 
-          <div>
-            <div>
-              Queue progress:
-              <div class="progress">
-                <div class="progress-bar" role="progressbar" [ngStyle]="{ width: uploader.progress + '%' }"></div>
-              </div>
-            </div>
-            <br />
-            <button type="button" class="btn btn-success btn-s" (click)="uploader.uploadAll()" [disabled]="!uploader.getNotUploadedItems().length">
-              <span class="glyphicon glyphicon-upload"></span> Upload all
-            </button>
-            <button type="button" class="btn btn-warning btn-s" (click)="uploader.cancelAll()" [disabled]="!uploader.isUploading">
-              <span class="glyphicon glyphicon-ban-circle"></span> Cancel all
-            </button>
-            <button type="button" class="btn btn-danger btn-s" (click)="uploader.clearQueue()" [disabled]="!uploader.queue.length">
-              <span class="glyphicon glyphicon-trash"></span> Remove all
-            </button>
-          </div>
-        </div>
-      </div>
-      
-      <hr>
-      <div class="row">
-        <div class="col-md-12">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <h3>====== Summary of Upload ======</h3>
-            </div>
-            <div class="panel-body">
-              <label>Company Stock Code: {{ stockPriceModel.stockCode}}</label>
-              <label>Stock Exchange: {{ stockPriceModel.stockExchange }}</label>
-              <label>No. Of Record Imported: {{ stockPriceModel.totalRows }}</label>
-              <label>From DateTime: {{ stockPriceModel.fromDateTime }}</label>
-              <label>To DateTime: {{ stockPriceModel.toDateTime }}</label>
-              <hr>
-            </div>
-            <div class="panel-heading" *ngIf="response">
-              <hr>
-              <h3>====== Summary of Upload Failed ======</h3>
-              {{response}}
-            </div>
-          </div>
-        </div>
-      </div>
+                  <div class="row form-group form-inline text-left">
+                    <label class="col-md-2">Select File </label>
+                    <input type="file" class="form-control col-md-10" ng2FileSelect [uploader]="uploader" />
+                  </div>
+                  <br><br>
+                  <div class="row">
+                      <p>Queue length: {{ uploader?.queue?.length }}</p>
+                  
+                      <table class="table">
+                        <thead>
+                          <tr>
+                            <th class="col-md-3">Name</th>
+                            <th class="col-md-3">Size</th>
+                            <th class="col-md-2">Progress</th>
+                            <th class="col-md-2">Status</th>
+                            <th class="col-md-2">Actions</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr *ngFor="let item of uploader.queue">
+                            <td>
+                              <strong>{{ item?.file?.name }}</strong>
+                            </td>
+                            <td *ngIf="uploader.options.isHTML5" nowrap>
+                              {{ item?.file?.size / 1024 / 1024 | number: ".2" }} MB
+                            </td>
+                            <td *ngIf="uploader.options.isHTML5">
+                              <div class="progress" style="margin-bottom: 0;">
+                                <div class="progress-bar" role="progressbar" [ngStyle]="{ width: item.progress + '%' }"></div>
+                              </div>
+                            </td>
+                            <td class="text-center">
+                              <span *ngIf="item.isSuccess"><i class="glyphicon glyphicon-ok"></i></span>
+                              <span *ngIf="item.isCancel"><i class="glyphicon glyphicon-ban-circle"></i></span>
+                              <span *ngIf="item.isError"><i class="glyphicon glyphicon-remove"></i></span>
+                            </td>
+                            <td nowrap>
+                              <button type="button" class="btn btn-success btn-xs" (click)="item.upload()"
+                                      [disabled]="item.isReady || item.isUploading || item.isSuccess">
+                                <span class="glyphicon glyphicon-upload"></span> Upload
+                              </button>
+                              <button type="button" class="btn btn-warning btn-xs" (click)="item.cancel()" [disabled]="!item.isUploading">
+                                <span class="glyphicon glyphicon-ban-circle"></span> Cancel
+                              </button>
+                              <button type="button" class="btn btn-danger btn-xs" (click)="item.remove()">
+                                <span class="glyphicon glyphicon-trash"></span> Remove
+                              </button>
+                            </td>
+                          </tr>
+                        </tbody>
+                      </table>  
+                  </div>
 
+                  <div class="row">
+                    <div><span>Queue progress:</span></div><br>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" [ngStyle]="{ width: uploader.progress + '%' }"></div>
+                    </div>
+
+                    
+                    <button type="button" class="btn btn-success btn-s" (click)="uploader.uploadAll()" [disabled]="!uploader.getNotUploadedItems().length">
+                      <span class="glyphicon glyphicon-upload"></span> Upload all
+                    </button>
+                    <button type="button" class="btn btn-warning btn-s" (click)="uploader.cancelAll()" [disabled]="!uploader.isUploading">
+                      <span class="glyphicon glyphicon-ban-circle"></span> Cancel all
+                    </button>
+                    <button type="button" class="btn btn-danger btn-s" (click)="uploader.clearQueue()" [disabled]="!uploader.queue.length">
+                      <span class="glyphicon glyphicon-trash"></span> Remove all
+                    </button>
+                  </div>
+                  <br>
+                  <br>
+                  <br>
+
+
+
+
+                  <div class="row">
+                    <span>====== Summary of Upload ======</span>
+                  </div>
+                  <div class="row" *ngIf="stockPriceModel">
+                    <label>Company Stock Code: {{ stockPriceModel.stockCode}}</label>
+                    <label>Stock Exchange: {{ stockPriceModel.stockExchange }}</label>
+                    <label>No. Of Record Imported: {{ stockPriceModel.totalRows }}</label>
+                    <label>From DateTime: {{ stockPriceModel.fromDateTime }}</label>
+                    <label>To DateTime: {{ stockPriceModel.toDateTime }}</label>
+                    <hr>
+                  </div>
+                        <!--
+                        <div *ngIf="response">
+                          <hr>
+                          <h3>====== Summary of Upload Failed ======</h3>
+                          {{response}}
+                        </div>
+                        -->
+
+            </div>
+        </div>
+        <div class="col-md-2"></div>
+    </div>
+</div>
 
