--- a/src/app/other/other.component.html
+++ b/src/app/other/other.component.html
@@ -1,1 +1,9 @@
-<p>other works!</p>
+<div class="row">
+        <div class="col-md-1"></div>
+        <div class="  col-md-10">
+              <br><br><br>
+              <h3 class="text-center myColor">Please be standby for our new functions coming ^*^</h3>
+              <br>
+        </div>
+        <div class="col-md-1"></div>
+    </div>
